--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   db:
-    image: pgrouting/pgrouting:16-3.5-develop
+    image: pgrouting/pgrouting:16-3.5-3.6
     container_name: ruteo-db
     environment:
       POSTGRES_DB: ruteo
